fix layout bugs, implement cards 3 dots (ellipsis)

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -153,9 +153,8 @@ header{
     z-index: 1;
   }
   figcaption{
-    height: 63px;
-    display: flex;
-    align-items: center;
+    height: 93px;
+    margin: 8px;
   }
 }
 /////////////////////////////////////
@@ -171,14 +170,9 @@ header{
   justify-content: center;
 }
 
-.post-content .figure{
-  margin: 15px;
-
-}
-
 figure>img{
-  max-width: 75%;
-  margin: auto;
+  max-width: 100%;
+  
 }
 
 iframe{
@@ -195,6 +189,19 @@ iframe{
   z-index: 10;
   height: 450px;
 }
+main h1{
+  margin-bottom: 5px;
+}
+
+.text_elipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 16px;     /* fallback */
+  max-height: 48px;      /* fallback */
+  -webkit-line-clamp: 3; /* number of lines to show */
+  -webkit-box-orient: vertical;
+}
 
 @media screen and (min-width: 450px) {
   .column.is-one-third, .column.is-one-third-tablet {
@@ -208,6 +215,13 @@ iframe{
 }
 
 @media screen and (min-width: 600px) {
+  figure>img{
+    max-width: 75%;
+    margin: auto;
+  }
+  .post-content .figure{
+    margin: 15px;
+  }
   .column.is-one-third, .column.is-one-third-tablet {
       width: 33.33%;
       flex: none;
